# nn_from_scratch

./: .gitignore  activation.py  layers.py  loss.py  pyproject.toml
demo/: main.py
nn/: activation.py  layers.py  loss.py  optimizers.py
