[tool.poetry]
name = "nn-from-scratch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "~=1.26"

[tool.poetry.group.dev.dependencies]
nnfs = "~=0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
